--- a/workbook-3/Mod01/PayrollCalculator/pom.xml
+++ b/workbook-3/Mod01/PayrollCalculator/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsite</groupId>
-    <artifactId>workbook-3</artifactId>
+    <artifactId>PayrollCalculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
