--- a/workbook-3/Mod03/pom.xml
+++ b/workbook-3/Mod03/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsite</groupId>
-    <artifactId>FormatDates</artifactId>
+    <artifactId>Mod03</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
